Fixed spacing on secondary alert

--- a/src/index.scss
+++ b/src/index.scss
@@ -129,9 +129,9 @@ a {
 }
 
 .secondary-alert {
-  top: -16px;
-  margin-left: -16px;
-  margin-right: -16px;
+  margin-top: -16px;
+  margin-left: -12px;
+  margin-right: -12px;
   font-size: 0.875rem;
   background-color: #d1e7ea;
   border-color: #a2ced5;
